<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.usinasantafe.pcik.presenter.initial.config.ConfigFragment">

    <TextView
        android:id="@+id/text_view_nro_aparelho_config"
        style="@style/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_nro_aparelho" />

    <EditText
        android:id="@+id/edit_text_nro_aparelho_config"
        style="@style/edit_view_number"
        android:inputType="number" />

    <TextView
        android:id="@+id/text_view_senha_config"
        style="@style/text_view"
        android:text="@string/texto_senha" />

    <EditText
        android:id="@+id/edit_text_senha_config"
        style="@style/edit_view"
        android:inputType="text" >
        <requestFocus />
    </EditText>


    <Button
        android:id="@+id/button_salvar_config"
        style="@style/botao_avulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_padrao_salvar" />

    <Button
        android:id="@+id/button_canc_config"
        style="@style/botao_avulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_padrao_cancelar" />

    <ProgressBar
        android:id="@+id/progress_bar_atual_dados"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_config" />

    <TextView
        android:id="@+id/text_status_atual_dados"
        style="@style/text_view_item_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto_inicio" />

</LinearLayout>